# agentlens-app

./: LICENSE  README.md  requirements.txt
agentlens-bench/: LICENSE  README.md  croissant.json  dataset_summary.json
docs/: PTA_MATCHER.md  SDK_README.md  SWE_TUTORIAL.md
experiments/: README.md  build_dataset.py  compute_correlation_metrics.py  create_visualizations.py  metrics_utils.py  run_full_experiment.py  run_model_comparison.py  run_quality_analysis.py  run_waste_analysis.py
experiments/baseline/: README.md
repro/: EVALUATE_MY_TRAJECTORIES.md  ISSUE.md  REPRODUCTION.md  SUMMARY.md  evaluate_my_trajectories.py  reproduce_k5.py  reproduce_k5_resample.py  reproduce_lucky_taxonomy.py  reproduce_paper.py  reproduce_waste.py  validate_pipeline.py
sdk/: README.md  pyproject.toml
sdk/samples/: basic_workflow.py  batch_compare.py  inspect_trace.py  openhands_workflow.py  unzip_data.py  unzip_data_openhands.py
sdk/src/swe_trace_sdk/: __init__.py  _code_analyzer.py  _generator.py  _generator_atif.py  _generator_openhands.py  equivalence.py  export.py  intent.py  io.py  llm.py  llm_cache.py  llm_providers.py  match.py  models.py  tool_registry.py  trace.py
sdk/tests/: test_quality_assessment.py
src/: code_analyzer.py  extract_swe_ground_truth.py  llm.py  llm_cache.py  swe_models.py  swe_pta_generator.py  swe_pta_matcher.py  swe_pta_merger.py  swe_pta_visualizer.py  swe_state_equivalence.py  swe_task_validator.py
webapp/: AGENTLENS_USER_GUIDE.md  Dockerfile  docker-compose.yml  pyproject.toml  startup.sh
webapp/backend/: app.py  config.py  schemas.py
webapp/backend/routers/: analysis.py  compare.py  upload.py
webapp/backend/services/: pipeline.py  store.py
webapp/frontend/: index.html  package-lock.json  package.json
webapp/frontend/src/: App.tsx  index.css
webapp/frontend/src/api/: client.ts
webapp/frontend/src/components/: AppLanding.tsx  AppNav.tsx  CohortView.tsx  CompareView.tsx  ComparisonView.tsx  GTGraphView.tsx  Sidebar.tsx  Tier1Dashboard.tsx  Tier2Assessment.tsx
webapp/frontend/src/types/: index.ts
(+3693 files in other folders)
