[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-trace-sdk"
version = "0.1.0"
description = "Analyse and compare coding-agent execution traces."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Anonymous" },
]
keywords = ["swe", "agent", "trace", "analysis", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "azure-identity>=1.15.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://anonymous.4open.science/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
