[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens"
version = "0.1.0"
description = "Qualitative assessment dashboard for coding agent trajectories."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "swe-trace-sdk",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "python-multipart>=0.0.6",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
include = ["backend*"]
